--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -18,9 +18,10 @@ jobs:
       matrix:
         os:
           - ubuntu
+          - macos
         
         ruby:
-          - "3.3"
+          - "3.4"
     
     steps:
     - uses: actions/checkout@v4
@@ -33,8 +34,10 @@ jobs:
       timeout-minutes: 5
       run: bundle exec bake test
     
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
+        include-hidden-files: true
+        if-no-files-found: error
         name: coverage-${{matrix.os}}-${{matrix.ruby}}
         path: .covered.db
   
@@ -46,10 +49,10 @@ jobs:
     - uses: actions/checkout@v4
     - uses: ruby/setup-ruby@v1
       with:
-        ruby-version: "3.3"
+        ruby-version: "3.4"
         bundler-cache: true
     
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
     
     - name: Validate coverage
       timeout-minutes: 5
