--- a/.github/workflows/test-external.yaml
+++ b/.github/workflows/test-external.yaml
@@ -17,11 +17,12 @@ jobs:
       matrix:
         os:
           - ubuntu
+          - macos
         
         ruby:
-          - "3.1"
           - "3.2"
           - "3.3"
+          - "3.4"
     
     steps:
     - uses: actions/checkout@v4
