--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,11 +18,12 @@ jobs:
       matrix:
         os:
           - ubuntu
+          - macos
         
         ruby:
-          - "3.1"
           - "3.2"
           - "3.3"
+          - "3.4"
         
         experimental: [false]
         
